# solang-playground

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  Makefile.toml  README.md  app.bundle.js  docker-compose.yml  index.html  invoke.ts  package-lock.json  package.json  script.ts
.github/workflows/: docker.yml
crates/backend/: Cargo.toml
crates/backend/src/: cli.rs  lib.rs  main.rs
crates/backend/src/services/: compile.rs  mod.rs  sandbox.rs
crates/browser/: Cargo.toml
crates/browser/src/: lib.rs
crates/browser/tests/: mock_document.sol  server_tests.rs
crates/generate-bindings/: Cargo.toml
crates/generate-bindings/src/: main.rs
crates/solang/: Cargo.toml
crates/solang/solang-parser/: Cargo.toml
crates/solang/solang-parser/src/: doccomment.rs  lexer.rs  lib.rs  pt.rs  tests.rs
crates/solang/solang-parser/src/helpers/: fmt.rs  loc.rs
crates/solang/src/: file_resolver.rs  languageserver.rs  lib.rs  main.rs
crates/solang/src/abi/: anchor.rs  ethereum.rs  mod.rs  polkadot.rs  tests.rs
crates/solang/src/codegen/: array_boundary.rs  cfg.rs  constant_folding.rs  dead_storage.rs  expression.rs  external_functions.rs  mod.rs  reaching_definitions.rs  revert.rs  solana_deploy.rs  storage.rs  undefined_variable.rs  unused_variable.rs  vector_to_slice.rs
crates/solang/src/codegen/dispatch/: mod.rs  polkadot.rs  solana.rs
crates/solang/src/codegen/encoding/: borsh_encoding.rs  buffer_validator.rs  mod.rs  scale_encoding.rs
crates/solang/src/codegen/events/: mod.rs  polkadot.rs
crates/solang/src/codegen/solana_accounts/: account_collection.rs  account_management.rs  mod.rs
crates/solang/src/codegen/statements/: mod.rs  try_catch.rs
crates/solang/src/codegen/strength_reduce/: expression_values.rs  mod.rs  reaching_values.rs  tests.rs  value.rs
crates/solang/src/codegen/subexpression_elimination/: anticipated_expressions.rs  available_expression.rs  available_expression_set.rs  common_subexpression_tracker.rs  expression.rs  instruction.rs  mod.rs  operator.rs  tests.rs
crates/solang/src/codegen/yul/: builtin.rs  expression.rs  mod.rs  statements.rs
crates/solang/src/codegen/yul/tests/: expression.rs
crates/solang/src/sema/: address.rs  ast.rs  builtin.rs  contracts.rs  diagnostics.rs  dotgraphviz.rs  eval.rs  file.rs  format.rs  function_annotation.rs  functions.rs  mod.rs  mutability.rs  namespace.rs  statements.rs  symtable.rs  tags.rs  types.rs  unused_variable.rs  using.rs  variables.rs
crates/solang/src/sema/expression/: arithmetic.rs  assign.rs  constructor.rs  function_call.rs  integers.rs  literals.rs  member_access.rs  mod.rs  resolve_expression.rs  retrieve_type.rs  strings.rs  subscript.rs  variable.rs
crates/solang/src/sema/tests/: mod.rs
crates/solang/src/sema/yul/: ast.rs  block.rs  builtin.rs  expression.rs  for_loop.rs  functions.rs  mod.rs  statements.rs  switch.rs  types.rs  unused_variable.rs
crates/solang/src/sema/yul/tests/: block.rs  expression.rs  for_loop.rs  mutability.rs  statements.rs  switch.rs  types.rs  unused_variable.rs
docs/: interact_with_contracts_on_chain.md
sysbox/: on-start.sh
