[package]
name = "backend"
version = "0.1.0"
edition = "2021"


[dependencies]
serde = { version = "1.0", features = ["derive"] }
clap = { version = "4.5", features = ["derive", "env"] }
serde_json = "1.0"
tempfile = "3.10"
tokio = { version = "1.28.2", features = [
    "macros",
    "time",
    "process",
    "rt-multi-thread",
] }
anyhow = "1.0"
log = "0.4"
regex = "1.10"

typescript-type-def = "0.5"
actix-web = "4.5"
actix-files = "0.6"
