[package]
publish = false
edition = "2021"
name = "demo-lsp-browser"
version = "0.0.0"

[features]
default = ["tower-lsp/runtime-agnostic"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
console_error_panic_hook = "0.1.7"
solang = { path = "../solang" }
futures = "0.3.30"
js-sys = "0.3.67"
tower-lsp = { version = "0.20.0", default-features = false }
#tree-sitter = { version = "0.9.0", package = "tree-sitter-facade" }
wasm-bindgen = "0.2.90"
wasm-bindgen-futures = { version = "0.4.40", features = ["futures-core-03-stream"] }
wasm-streams = "0.4.0"
#web-tree-sitter-sys = "1.3.0"
tokio = { version = "1.35.1", features = ["rt", "macros", "sync", "io-util"] }



[dependencies.web-sys]
version = "0.3.67"
features = [
  "console",
  "HtmlTextAreaElement",
  "ReadableStream",
  "WritableStream",
]



[dev-dependencies]
tower-test = "0.4"
serde_json = "1.0"
