[package]
name = "solang"
version = "0.3.3"
authors = ["Sean Young <sean@mess.org>", "Lucas Steuernagel <lucas.tnagel@gmail.com>", "Cyrill Leutwiler <bigcyrill@hotmail.com>"]
homepage = "https://github.com/hyperledger/solang"
documentation = "https://solang.readthedocs.io/"
license = "Apache-2.0"
description = "Solang Solidity Compiler"
keywords = [ "solidity", "compiler", "solana", "polkadot", "substrate" ]
rust-version = "1.72.0"
edition = "2021"
exclude = [ "/.*", "/docs",  "/examples", "/solana-library", "/tests", "/integration", "/vscode", "/testdata" ]


[dependencies]
regex = "1.10.3"
num-bigint = { version = "0.4.4"}
num-traits = "0.2.17"
num-integer = "0.1.45"
hex = "0.4.3"
tiny-keccak = { version = "2.0.2", features = ["keccak"] }
serde_json = "1.0.113"
serde = "1.0.196"
serde_derive = { version = "1.0.196" }
blake2-rfc = "0.2.18"
#handlebars = "5.1.1"
contract-metadata = "3.2.0"
semver = { version = "1.0.21", features = ["serde"] }
tempfile = "3.9.0"
libc = { version = "0.2.152", optional = true }
tower-lsp = { version = "0.20.0", default-features= false }
tokio = { version = "1.35.1", features = ["rt", "macros", "sync", "io-util"] }
#tokio-util = { version = "0.7.10", features = ["codec", "compat"] }
futures = "0.3.30"
base58 = "0.2.0"
sha2 = "0.10.8"
ripemd = "0.1.3"
bitvec = "1.0.1"
funty = "2.0.0"
itertools = "0.12.1"
num-rational = "0.4.1"
indexmap = "2.2.1"
once_cell = "1.19.0"
solang-parser = { path = "solang-parser", version = "0.3.3" }
codespan-reporting = "0.11.1"
phf = { version = "0.11.2", features = ["macros"] }
rust-lapper = { version = "1.1.0", optional = true }
anchor-syn = { version = "0.29.0", features = ["idl-build"] }
convert_case = "0.6.0"
parse-display = "0.8.2"
parity-scale-codec = "3.6.9" 
ink_metadata = "4.3.0"
scale-info = "2.10.0"
petgraph = "0.6.4"
wasmparser = "0.121.0"
wasm-encoder = "0.41.0"
contract-build = { version = "3.2.0", optional = true }
normalize-path = "0.2.1"
bitflags = "2.4.2"
scopeguard = "1.2.0"

wasm-bindgen = "0.2.90"
wasm-bindgen-futures = { version = "0.4.40", features = ["futures-core-03-stream"] }
wasm-streams = "0.4.0"


[features]
default = ["language_server"]
language_server = [ "rust-lapper"]

